--- a/design/templates/OpenGame/eco_queue.tpl.html
+++ b/design/templates/OpenGame/eco_queue.tpl.html
@@ -19,7 +19,7 @@ sn_timers.unshift({'id': '{$QUE_HTML}_{$QUE_ID}', 'type': TIMER_BUILD_QUE_V2, 'o
   'msg_done': '{LA_eco_que_empty}',
   // 'url': document.location.href,
   'template': '<div class="que_item {$QUE_HTML}_{$QUE_ID}_container_[UNIT_QUE_PLACE] fl" title="[UNIT_NAME] ([UNIT_LEVEL])">\
-    <span class="unit_picture"><img src="{D_SN_ROOT_VIRTUAL}{dpath}gebaeude/[UNIT_ID].gif" align="top" width="100%" height="100%"></span>\
+    <span class="que_unit_picture"><img src="{D_SN_ROOT_VIRTUAL}{dpath}gebaeude/[UNIT_ID].gif" align="top" width="100%" height="100%"></span>\
     <span class="icon_alpha que_unit_level {$QUE_HTML}_{$QUE_ID}_level_[UNIT_QUE_PLACE]">[UNIT_LEVEL]</span>\
     <span class="icon_alpha que_unit_time {$QUE_HTML}_{$QUE_ID}_timer_[UNIT_QUE_PLACE] que_item_[UNIT_QUE_PLACE]">[UNIT_TIME]</span>\
   </div>',
