--- a/design/templates/OpenGame/overview_fleet_event.tpl.html
+++ b/design/templates/OpenGame/overview_fleet_event.tpl.html
@@ -1,7 +1,7 @@
 <tr class="{fleet_status}">
 	{fleet_javai}
 	<th>
-		<div id="bxx{fleet_order}" class="z">-</div>
+		<div id="bxx{fleet_order}">-</div>
 		<font color="lime">{fleet_time}</font>
 	</th><th colspan="3">
 		<span class="{fleet_status} {fleet_prefix}{fleet_style}">{fleet_descr}</span>
