--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -4,7 +4,7 @@
 <!--<div class="c_c"><input type="button" value="{L_sys_blitz_global_button}" onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}blitz_register.php');"/></div>-->
 <!-- ENDIF -->
 
-<table cellpadding="3" cellspacing="0" class="header c_c" id="resources"><tbody>
+<table cellpadding="3" cellspacing="0" class="header c_c" id="navbar"><tbody>
   <!-- IF GAME_BLITZ_REGISTER && ! GAME_BLITZ -->
   <tr>
     <td class="c_r markup">
