--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -156,7 +156,7 @@ uni_row[{galaxyrow.PLANET_NUM}] = {
 
       <tr><th class="c_l" colspan=2>{L_sys_player}</th></tr>
       <tr><td>{L_sys_birthday}</td><td><span class="birthday">&nbsp;</span></td></tr>
-      <tr><td>{L_Way_vacation}</td><td><span class=vacation>&nbsp;</span></td></tr>
+      <tr><td colspan="2"><span class=vacation>{L_Way_vacation}</span></td></tr>
       <tr class=protected><td>{L_uni_protected_player}</td><td>{L_uni_protected_player_shortcut}</td></tr>
       <tr class=noob><td>{L_Weak_player}</td><td>{L_weak_player_shortcut}</td></tr>
       <tr class=strong><td>{L_Strong_player}</td><td>{L_strong_player_shortcut}</td></tr>
