--- a/design/templates/OpenGame/fleet_miniatures.tpl.html
+++ b/design/templates/OpenGame/fleet_miniatures.tpl.html
@@ -1,23 +1,23 @@
 <!-- BEGIN fleets -->
   <!-- IF fleets.START_COORDS -->
   <h3>
-  <div style="vertical-align: top">
-    <div style="display: inline-block;">
-      {fleets.START_COORDS} {fleets.START_TYPE_TEXT_SH} {fleets.START_NAME}
+  <div class="flt-mini-mission">
+    <div>
+      {fleets.START_COORDS} {fleets.START_TYPE_TEXT_SH}<br />{fleets.START_NAME}
       <!-- IF ((fleets.MISSION == 7 || fleets.MISSION == 4) && fleets.MESSAGE == 1) || (fleets.MISSION != 7 && fleets.MISSION != 4) -->
-      <div class="z" id="fleet_timer_start{fleets.ID}"></div>
+      <div id="fleet_timer_start{fleets.ID}"></div>
       {fleets.START_TIME_TEXT}
       <!-- ELSE -->
       -
       <!-- ENDIF -->
     </div>
-    <div style="display: inline-block;vertical-align: top;">
+    <div id="fleet_mini_mission">
     =&gt;
     </div>
-    <div style="display: inline-block;">
-      <span id="end_coords">{fleets.END_COORDS}</span> <span id="end_planet_type">{fleets.END_TYPE_TEXT_SH}</span> <span id="end_name">{fleets.END_NAME}</span>
+    <div>
+      <span id="end_coords">{fleets.END_COORDS}</span> <span id="end_planet_type">{fleets.END_TYPE_TEXT_SH}</span><br /><span id="end_name">{fleets.END_NAME}</span>
       <!-- IF fleets.MESSAGE == 0 -->
-      <div class="z" id="fleet_timer_end{fleets.ID}"></div>
+      <div id="fleet_timer_end{fleets.ID}"></div>
       {fleets.END_TIME_TEXT}
       <!-- ELSE -->
       -
@@ -27,7 +27,7 @@
   </h3>
   <!-- ENDIF -->
 
-  <div id="unit_miniatures_container"><!-- BEGIN ships -->
+  <div id="fleet_unit_miniatures_container"><!-- BEGIN ships -->
     <div class="unit_miniatures_wrapper">
       <img src="{dpath}gebaeude/{ships.ID}.gif" style="width: 100%; height: 100%;"/>
       <!--<img id="unit_info_image" />-->
