--- a/design/templates/OpenGame/planet_fleet_list.tpl.html
+++ b/design/templates/OpenGame/planet_fleet_list.tpl.html
@@ -63,7 +63,7 @@
 
     <tr class="{$OV_FLEET_ACTION} {$OV_FLEET_PREFIX}{$OV_FLEET_STYLE}">
       <th>
-        <div id="ov_fleer_timer_{$OV_FLEET_ACTION}{fleets.ID}" class="z">00:00:00</div>
+        <div id="ov_fleer_timer_{$OV_FLEET_ACTION}{fleets.ID}">00:00:00</div>
         {fleets.EVENT_TIME_TEXT}
       </th>
       <th style="cursor: pointer;" onmouseover='fleet_dialog_show(this, {fleets.ID})' onmouseout='popup_hide()'>
@@ -90,7 +90,7 @@
       <!-- ENDIF -->
       <th>
         {fleets.MISSION_NAME}<br>
-        <div class="z"><!-- IF fleets.OV_LABEL == 0 -->{L_ov_fleet_arrive}<!-- ELSEIF fleets.OV_LABEL == 1 -->{fleets.MISSION_NAME} - {L_ov_fleet_hold}<!-- ELSEIF fleets.OV_LABEL == 2 -->{L_ov_fleet_return}<!-- ELSEIF fleets.OV_LABEL == 3 -->{L_ov_fleet_rocket}<!-- ENDIF --></div>
+        <div><!-- IF fleets.OV_LABEL == 0 -->{L_ov_fleet_arrive}<!-- ELSEIF fleets.OV_LABEL == 1 -->{fleets.MISSION_NAME} - {L_ov_fleet_hold}<!-- ELSEIF fleets.OV_LABEL == 2 -->{L_ov_fleet_return}<!-- ELSEIF fleets.OV_LABEL == 3 -->{L_ov_fleet_rocket}<!-- ENDIF --></div>
       </th>
     </tr>
 
