--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -179,6 +179,11 @@ div .ui-dialog-content table {
   background-image: url(images/icons.png) !important;
 }
 
+div.ui-slider-range {
+  background: #f6a828; !important;
+}
+
+
 /* Unit preview box on build pages */
 .unit_preview {
   border-color: #344566;
@@ -189,18 +194,15 @@ div .ui-dialog-content table {
 }
 
 table:not(.markup):not(.noborder):not(.no_border_image), div#tab_container, div.market_services {
-  border: solid 10px red;
-  border-radius: 6px;
+  border: solid transparent;
+  border-radius: 0.5em;
 
-  -moz-border-image: url("images/border.png") 22 9 24 23 round round;
-  -o-border-image: url("images/border.png") 22 9 24 23 round round;
-  -webkit-border-image: url("images/border.png") 22 9 24 23 round round;
-  border-image: url("images/border.png") 22 9 24 23 round round;
-  border-top: 22px;
-  border-right: 9px;
-  border-bottom: 24px;
-  border-left: 23px;
+  border-width: 2.181818181818em 1em 2.272727272727em 2.272727272727em;
 
+  -moz-border-image:    url("images/border.png") 24 11 25 25 round round;
+  -o-border-image:      url("images/border.png") 24 11 25 25 round round;
+  -webkit-border-image: url("images/border.png") 24 11 25 25 round round;
+  border-image:         url("images/border.png") 24 11 25 25 round round;
 }
 
 div#tab_container {
@@ -214,7 +216,7 @@ div#tab_container > div {
 
 div.market_services {
   background-color: transparent;
-  padding: 0em;
+  padding: 0;
 }
 
 .market_services div:first-child {
@@ -234,6 +236,6 @@ div.market_services {
 }
 /*
 .ui-tabs .ui-tabs-nav li {
-  border-bottom-width: 1px;
+  border-bottom-width: 0.1em;
 }
 */
