--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -231,6 +231,16 @@
           </th>
         </tr>
 
+        <tr>
+          <td class="c_c">
+            <label for="PLAYER_OPTION_DESIGN_DISABLE_BORDERS">{L_PLAYER_OPTION_DESIGN_DISABLE_BORDERS}</label>
+          </td>
+          <td class="c_c">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_DESIGN_DISABLE_BORDERS}]" value="0" />
+            <input type="checkbox" name="options[{D_PLAYER_OPTION_DESIGN_DISABLE_BORDERS}]" value="1" id="PLAYER_OPTION_DESIGN_DISABLE_BORDERS" <!-- IF PLAYER_OPTION_DESIGN_DISABLE_BORDERS -->checked="checked" <!-- ENDIF -->/>
+          </td>
+        </tr>
+
         <!-- IF .options_3 -->
         <!-- BEGIN options_3 -->
         <tr>
