--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -21,7 +21,7 @@ JQ means "jQuery Theme Roller" http://jqueryui.com/themeroller/
 You can look at actual JQ link for theme in /design/css/jquery-ui.css
 
 #13233E
-  TH background
+  TD background
   JQ Header-Toolbar text & icon
 #222D42
   Button default color
@@ -29,7 +29,7 @@ You can look at actual JQ link for theme in /design/css/jquery-ui.css
 #233452
   Between TH and TD when you need mid-header in TD. Example - News header background and Survey header background
 #344566
-  TD background
+  TH background
   JQ Content background
 #415680
   Highlighted background
@@ -66,7 +66,8 @@ th, td, input, select, textarea {
 }
 
 td.c, th.c_l, th.c_r, th.c_c, th.c_j, tr.c_l > th, tr.c_r > th, tr.c_c > th, tr.c_j > th {
-  background-image     : url("images/table_th_background.png");
+  background-image: none; /* url("images/table_th_background.png");*/
+  background-color: #13233E;
 }
 
 td.l {
@@ -193,7 +194,10 @@ div.ui-slider-range {
   border-color: #6B90D3;  /* Reserved for unit_preview border color */
 }
 
-table:not(.markup):not(.noborder):not(.no_border_image), div#tab_container, div.market_services {
+body:not(.no_border_image) table:not(.markup):not(.noborder):not(.no_border_image),
+body:not(.no_border_image) div#tab_container,
+body:not(.no_border_image) div.market_services
+{
   border: solid transparent;
   border-radius: 0.5em;
 
