--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -96,7 +96,7 @@
       var FONT_SIZE = parseFloat('{FONT_SIZE}');
     </script>
 
-    <!-- IF FONT_SIZE -->
+    <!-- IF FONT_SIZE != FONT_SIZE_PERCENT_DEFAULT_STRING -->
     <style type="text/css">
       html {
         font-size: {FONT_SIZE} !important;
