--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -1,6 +1,6 @@
 <h2>{PAGE_HEADER}</h2>
 
-<table>
+<table class="border_image_small" id="build_sort">
 <tr class="c_c">
   <th colspan="4">
     {L_sys_sort}
@@ -276,7 +276,7 @@ planet = {
             <input type="hidden" name="action" />
             <div id="unit_cost_container"<!-- IF STACKABLE --> class="unit_create_stackable"<!-- ENDIF -->>
               <div id="unit_time_div" align="center">{STRING_BUILD_TIME}<span id="unit_time"></span></div>
-              <table style="font-size: {$FONT_SIZE};" id="unit_cost_table" class="noborder">
+              <table style="font-size: {$FONT_SIZE};" id="unit_cost_table" class="border_image_small">
                 <tr class="c_c">
                   <th width=45px>{L_sys_resources}</th>
                   <th width=65>{L_eco_price}</th>
