--- a/design/templates/OpenGame/fleet_miniatures.tpl.html
+++ b/design/templates/OpenGame/fleet_miniatures.tpl.html
@@ -11,8 +11,19 @@
       -
       <!-- ENDIF -->
     </div>
-    <div id="fleet_mini_mission">
-    =&gt;
+    <div id="fleet_mini_mission" class="notice">
+      <!-- -->
+      <!--&lt;!&ndash; IF target_mission &ndash;&gt;-->
+      <!--<img src="design/images/mission_{target_mission}.png" /><br/>-->
+      <!--{MISSION_NAME}-->
+      <!--&lt;!&ndash; ELSE &ndash;&gt;-->
+        <!--=&gt;-->
+      <!--&lt;!&ndash; ENDIF &ndash;&gt;-->
+      <!-- -->
+      <img src="design/images/mission_pointer.png" />
+      <!-- IF MISSION_NAME -->
+      <br /><span>{MISSION_NAME}</span>
+      <!-- ENDIF -->
     </div>
     <div>
       <span id="end_coords">{fleets.END_COORDS}</span> <span id="end_planet_type">{fleets.END_TYPE_TEXT_SH}</span><br /><span id="end_name">{fleets.END_NAME}</span>
