--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -216,7 +216,7 @@
 </tbody></table>
 
 <!-- IF SN_RENDER_NAVBAR_PLANET -->
-<table align="center">
+<table align="center" class="border_image_small" id="navbar_resources">
   <!-- INCLUDE planet_resources -->
 </table>
 <!-- ENDIF -->
